[gd_scene load_steps=13 format=3 uid="uid://cxhmrgbsshsar"]

[ext_resource type="Script" path="res://scenes/npcs/rest_area/rest_area.gd" id="1_1p7u6"]
[ext_resource type="Texture2D" uid="uid://cxkp4e6jvng6p" path="res://scenes/npcs/rest_area/Custom Fires-Calmpurple.png" id="1_6yhlb"]
[ext_resource type="PackedScene" uid="uid://cst0j78h1olvf" path="res://scenes/ui/interactable_hint/interactable_area.tscn" id="1_b48r4"]
[ext_resource type="Texture2D" uid="uid://dpf38flxqfpco" path="res://scenes/npcs/rest_area/triangleroaster.png" id="2_dqpxy"]
[ext_resource type="Texture2D" uid="uid://cdh4g30qq4ge6" path="res://scenes/npcs/rest_area/drumsticks.png" id="2_e5fpa"]
[ext_resource type="Texture2D" uid="uid://btbraijwbccmb" path="res://scenes/npcs/rest_area/Custom Fires-Mildorange.png" id="3_pqxig"]
[ext_resource type="Texture2D" uid="uid://ceidfyv6u8v1f" path="res://scenes/npcs/rest_area/large pot.png" id="4_ekagn"]
[ext_resource type="Texture2D" uid="uid://bc7yr0y0ani4l" path="res://scenes/npcs/rest_area/pot.png" id="5_4ecra"]
[ext_resource type="Texture2D" uid="uid://beraa0u2xhdnd" path="res://scenes/npcs/rest_area/Custom Fires-Wildblue.png" id="6_dtll5"]

[sub_resource type="Animation" id="Animation_ruka3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bnmx7"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1teh"]
_data = {
"RESET": SubResource("Animation_ruka3"),
"idle": SubResource("Animation_bnmx7")
}

[node name="RestArea" type="Node2D"]
script = ExtResource("1_1p7u6")

[node name="InteractableArea" parent="." instance=ExtResource("1_b48r4")]
position = Vector2(0, -6)
hint_text = "rest"

[node name="Decor" type="Sprite2D" parent="."]
position = Vector2(-3, -1)
texture = ExtResource("2_dqpxy")

[node name="Decor2" type="Sprite2D" parent="."]
position = Vector2(-2, 6)
texture = ExtResource("4_ekagn")

[node name="Decor3" type="Sprite2D" parent="."]
position = Vector2(-2, 6)
texture = ExtResource("5_4ecra")

[node name="Decor4" type="Sprite2D" parent="."]
position = Vector2(-2, 5)
texture = ExtResource("2_e5fpa")

[node name="Fire" type="Sprite2D" parent="."]
texture = ExtResource("3_pqxig")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire"]
libraries = {
"": SubResource("AnimationLibrary_v1teh")
}
autoplay = "idle"
speed_scale = 0.2

[node name="Fire2" type="Sprite2D" parent="."]
texture = ExtResource("1_6yhlb")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire2"]
libraries = {
"": SubResource("AnimationLibrary_v1teh")
}
autoplay = "idle"
speed_scale = 0.2

[node name="Fire3" type="Sprite2D" parent="."]
texture = ExtResource("6_dtll5")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire3"]
libraries = {
"": SubResource("AnimationLibrary_v1teh")
}
autoplay = "idle"
speed_scale = 0.2
